deployment/kubernetes-local/services/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: udagram
    service: database
  ports:
  - port: 5432
    targetPort: 5432
    protocol: "TCP"
  clusterIP: None
