deployment/kubernetes-local/services/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: udagram
    service: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: "TCP"
