deployment/kubernetes-local/services/reverse-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverseproxy
spec:
  selector:
    app: udagram
    service: reverseproxy
  ports:
  - port: 8080
    targetPort: 8080
    protocol: "TCP"
  type: NodePort
